Move check for --disable-directwrite-for-ui switch

This change will allow the DirectWriteFontProxyMessageFilter to bypass this
switch. This is needed so that the message filter can still load fonts for
renderers which might still be using DirectWrite for font rendering.

BUG=594188

Review URL: https://codereview.chromium.org/1839213002

Cr-Commit-Position: refs/heads/master@{#384035}