ui/gfx/win/direct_write.cc
@@ -45,11 +45,8 @@ bool ShouldUseDirectWrite() {
 }
 
 void CreateDWriteFactory(IDWriteFactory** factory) {
-  if (!ShouldUseDirectWrite() ||
-      base::CommandLine::ForCurrentProcess()->HasSwitch(
-          switches::kDisableDirectWriteForUI)) {
+  if (!ShouldUseDirectWrite())
     return;
-  }
 
   using DWriteCreateFactoryProc = decltype(DWriteCreateFactory)*;
   HMODULE dwrite_dll = LoadLibraryW(L"dwrite.dll");
@@ -78,6 +75,11 @@ void MaybeInitializeDirectWrite() {
   if (tried_dwrite_initialize)
     return;
   tried_dwrite_initialize = true;
+
+  if (base::CommandLine::ForCurrentProcess()->HasSwitch(
+          switches::kDisableDirectWriteForUI)) {
+    return;
+  }
 
   base::win::ScopedComPtr<IDWriteFactory> factory;
   CreateDWriteFactory(factory.Receive());
